Package name fixed

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dmkorocrm",
+    "name": "dmk/dmkorocrm",
     "description": "Useful enhancements for OroCRM",
     "homepage": "https://github.com/DMKEBUSINESSGMBH/DMKOroCRM.git",
     "license": "OSL-3.0",
