--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "DMKClub\\Bundle": "src/"
+            "DMKOroCRM\\Bundle": "src/"
          }
     },
     "repositories": [
