Show age on calender event

--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/services.yml
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/services.yml
@@ -17,4 +17,5 @@ services:
     dmkorocrm_contact.task.normalizer:
         class: "%dmkorocrm_contact.birthday.normalizer.class%"
         arguments:
+            - "@translator"
             - "@oro_reminder.entity.manager"
