Button moved to 'More actions'

--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/placeholders.yml
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/placeholders.yml
@@ -1,11 +1,10 @@
 placeholders:
-    view_navButtons_before:
-        items:
-            add_calendar_button:
-                order: 10
 
 items:
-    add_calendar_button:
+    dmkorocrm_contact_calendar_add_button:
         template: DMKOroCRMContactBundle:actions:addCalendarButton.html.twig
         applicable: "@oro_ui.placeholder.filter->isInstanceOf($entity$, %orocrm_contact.entity.class%)"
-        
+
+    dmkorocrm_contact_calendar_add_link:
+        template: DMKOroCRMContactBundle:actions:addCalendarLink.html.twig
+        applicable: "@oro_ui.placeholder.filter->isInstanceOf($entity$, %orocrm_contact.entity.class%)"
