--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,10 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "oro/crm": "2.x"
+        "php": ">=7.2",
+        "oro/crm": "~3.1.1"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        }
-    }
+    "prefer-stable": true
 }
 
