--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/services.yml
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/config/services.yml
@@ -1,11 +1,7 @@
-parameters:
-    dmkorocrm_contact.calendar_provider.class:            DMKOroCRM\Bundle\ContactBundle\Provider\BirthdayCalendarProvider
-    dmkorocrm_contact.birthday.normalizer.class:           DMKOroCRM\Bundle\ContactBundle\Provider\BirthdayCalendarNormalizer
-
 services:
 
     dmkorocrm_contact.calendar_provider:
-        class: "%dmkorocrm_contact.calendar_provider.class%"
+        class: DMKOroCRM\Bundle\ContactBundle\Provider\BirthdayCalendarProvider
         arguments:
             - "@oro_entity.doctrine_helper"
             - "@oro_security.acl_helper"
@@ -15,7 +11,7 @@ services:
             - { name: oro_calendar.calendar_provider, alias: birthdays }
 
     dmkorocrm_contact.task.normalizer:
-        class: "%dmkorocrm_contact.birthday.normalizer.class%"
+        class: DMKOroCRM\Bundle\ContactBundle\Provider\BirthdayCalendarNormalizer
         arguments:
             - "@translator"
             - "@oro_reminder.entity.manager"
